# trading

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  README.md  app.py  build.sh  config.py  pyproject.toml  railway.toml  requirements.txt  start.sh  vercel-build.js  vercel-build.sh  vercel.json
api/: client.py
models/: trade.py
services/: indicators.py  market_analysis.py  news_analyzer.py  risk_management.py  trading.py
static/css/: styles.css
static/js/: app.js
templates/: index.html
utils/: helpers.py
