[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forex-trading-bot"
version = "0.1.0"
description = "Forex Trading Bot"
requires-python = ">=3.12.0"
dependencies = [
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pandas-ta>=0.3.14b0",
    "python-dotenv>=1.0.0",
    "ccxt>=4.0.0",
    "flask>=3.0.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.4.1",
    "requests>=2.31.0",
    "ta>=0.10.2",
    "yfinance>=0.2.28",
    "textblob>=0.17.1",
    "scipy>=1.11.0",
    "gunicorn>=21.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]
